--- a/Code_Patterns_Api/Code_Patterns_Api/Code_Patterns_Api/appsettings.json
+++ b/Code_Patterns_Api/Code_Patterns_Api/Code_Patterns_Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Sql": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\MyWork\\CodePatterns\\Code_Patterns_Api\\Code_Patterns_Api\\Code_Patterns_Api\\MyData.mdf;Integrated Security=True;Connect Timeout=30"
+  }
 }
